<resources>
    <string name="app_name" translatable="false">WeGo</string>
    <string name="vtcpay_appid" translatable="false">500008024</string>
    <string name="vtcpay_account" translatable="false">0988345395</string>
    <string name="vtcpay_mk" translatable="false">nmt123456</string>
    <string name="mapbox_api_key" translatable="false">pk.eyJ1IjoiaG9haXRodWFuOTQiLCJhIjoiY2p1M3NuOWFoMG9jejQxbzV2eDNtbm4yaCJ9.kfaayahYzva6w2Ftpi_z0A</string>
    <string name="facebook_app_id" translatable="false">745706189184468</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb745706189184468</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="Logo" translatable="false"> WEGO</string>
    <string name="phone_region_id" translatable="false">+84</string>
    <string name="support_email" translatable="false">wego@asia.com</string>
    <string name="support_phone" translatable="false">+33763133710</string>
    <string name="wego_car_sharing_service">Wego Car-sharing</string>
    <string name="login_yor_account">ĐĂNG NHẬP TÀI KHOẢN</string>
    <string name="signup_yor_account">ĐĂNG KÍ TÀI KHOẢN MỚI</string>
    <string name="Login"> Đăng Nhập</string>
    <string name="Signup">Đăng Ký</string>
    <string name="LoginFacebook">Tiếp tục với Facebook </string>
    <string name="LoginEmail"> Đăng nhập bằng Email </string>
    <string name="textOr"> Hoặc đăng nhập bằng </string>
    <string name="hint_id"> Số điện thoại</string>
    <string name="hint_password"> Mật khẩu</string>
    <string name="hint_password_encord"> Nhập lại mật khẩu</string>
    <string name="hint_login">Số điện thoại</string>
    <string name="textTBDN"> Đăng nhập thành công</string>
    <string name="Forgotpass"> Quên mật khẩu?</string>
    <string name="Changepass"> Thay đổi mật khẩu</string>
    <string name="CurrentPass"> Mật khẩu hiện tại</string>
    <string name="Newpass">Nhập mật khẩu mới</string>
    <string name="Newpass_encord"> Nhập lại mật khẩu mới</string>
    <string name="Createnewaccount"> <u>Tạo một tài khoản mới</u>.</string>
    <string name="InforAcc"> Thông Tin Tài Khoản</string>
    <string name="InforAcc1"> Thông Tin Tài Khoản</string>
    <string name="InforProfile"> Thông tin cá nhân</string>
    <string name="InforPa"> Thông Tin Hành Khách</string>
    <string name="InforCar"> Thông tin xe</string>
    <string name="TypeCar"> Hãng xe</string>
    <string name="NameCar"> Tên xe</string>
    <string name="YearCar"> Năm sản xuất</string>
    <string name="ColorCar"> Màu sắc</string>
    <string name="Infor"> Thông tin </string>
    <string name="version"> Phiên bản 1.0 </string>
    <string name="Share"> Chia sẻ </string>
    <string name="Exit"> Đăng xuất </string>
    <string name="Term"> Điều Khoản </string>
    <string name="PolicyTerm"><u>các chính sách và điều khoản</u>.</string>
    <string name="PolicyTerm1">Các chính sách và điều khoản sử dụng.</string>
    <string name="AcceptCondition"> Đồng ý các điều khoản sử dụng </string>
    <string name="LoginSuccess">Đăng nhập thành công</string>
    <string name="LoginFail">Đăng nhập thất bại</string>
    <string name="fillemail"> Điền địa chỉ email của bạn</string>
    <string name="Submit"> Gửi yêu cầu</string>
    <string name="BackLogin"> Về màn hình đăng nhập </string>
    <string name="Fullname"> Họ và Tên </string>
    <string name="Male"> Nam </string>
    <string name="Female"> Nữ </string>
    <string name="Review"> Đánh giá \  </string>
    <string name="points"> \ DT  </string>
    <string name="Yes"> Có </string>
    <string name="yes"> có </string>
    <string name="No"> Không </string>
    <string name="err"> Lỗi!</string>
    <string name="remove">Xóa</string>
    <string name="validate">xác nhận</string>
    <string name="Validate">Xác nhận</string>
    <string name="xac_nhan"> Xác Nhận</string>
    <string name="Accept"> Đồng ý </string>
    <string name="Accept1"> Chấp nhận </string>
    <string name="Continue"> Tiếp tục</string>
    <string name="An">Ẩn</string>
    <string name="Gui">Gửi</string>
    <string name="ok" translatable="false">OK</string>
    <string name="Close">Đóng </string>
    <string name="Cancel1">Hủy </string>
    <string name="Cancel2">HUỶ </string>
    <string name="connectGPSfail">GPS đã tắt!</string>
    <string name="defaultPoint"> Vui lòng bật định vị để tiếp tục!</string>
    <string name="connectfail"> Kết nối thất bại!</string>
    <string name="errorconnect"> Lỗi kết nối!</string>
    <string name="invalidephonenumber"> Không thể xác nhận số điện thoại này!</string>
    <string name="missfield"> Thông tin chưa đầy đủ, vui lòng kiểm tra lại!</string>
    <string name="tooshor"> Vui lòng nhập nội dung tin nhắn ít nhất 10 kí tự! </string>
    <string name="tooshor1"> Vui lòng nhập nội dung! </string>
    <string name="signupsuccess"> Tài khoản đã được tạo thành công</string>
    <string name="veryfisuccess"> Xác nhận thành công!</string>
    <string name="signupfail"> Tạo tài khoản thất bại!</string>
    <string name="verifyfail"> Mã xác nhận không chính xác!</string>
    <string name="inputpasswordfail">  Mật khẩu nhập vào không chính xác!</string>
    <string name="loginfial">  Tài khoản hoặc mật khẩu không chính xác!</string>
    <string name="loginfial1">  Đăng nhập thất bại \</string>
    <string name="loginsuccess">  Đăng nhập thành công \</string>
    <string name="Checkinternet"> Không thể kết nối Internet!</string>
    <string name="changedinfosuccess"> Thay đổi thông tin thành công!</string>
    <string name="changedinfofail"> Thay đổi thông tin thất bại!</string>
    <string name="acceptcodition">Vui lòng đồng ý các điều khoản sử dụng!</string>
    <string name="emptygender">Bạn chưa chọn giới tính!</string>
    <string name="invalide_name">Tên không hợp lệ!</string>
    <string name="invalide_email">Địa chỉ email không hợp lệ!</string>
    <string name="invalide_phone">Số điện thoại không hợp lệ!</string>
    <string name="invalide_pass">Mật khẩu không chính xác!</string>
    <string name="requestenablelocation"> Ứng dụng yêu cầu bật định vị trên thiết bị của bạn</string>
    <string name="enablelocation"> Bật định vị</string>
    <string name="mxn">Mã xác nhận của bạn là gì?</string>
    <string name="send_code">Một mã xác nhận đã được gửi đến số điện thoại \</string>
    <string name="h_nh_kh_ch">Hành khách</string>
    <string name="t_i_x">Tài xế</string>
    <string name="b_n_c_th_thay">Không hỏi lại</string>
    <string name="chonj">Bạn sẽ chọn gì hôm nay?</string>
    <string name="xin_ch_o">Xin chào, \ </string>
    <string name="morning">Chào buổi sáng, \ </string>
    <string name="morning1">Hi,</string>
    <string name="mid">Chào buổi trưa, \ </string>
    <string name="mid1">Hi, </string>
    <string name="afternoon">Chào buổi chiều, \ </string>
    <string name="evening">Chào buổi tối, \ </string>
    <string name="booknow">  Đi ngay bây giờ </string>
    <string name="now">  Ngay bây giờ </string>
    <string name="booklater"> Đặt chuyến trước </string>
    <string name="booklater1"> Chọn thời gian </string>
    <string name="Cancel">Hủy chuyến</string>
    <string name="Cance_choose">Huỷ lựa chọn?</string>
    <string name="Apply">Áp dụng </string>
    <string name="Addtrip">Thêm Chuyến Đi</string>
    <string name="Adddepart">Xác nhận điểm xuất phát</string>
    <string name="Adddesti">Xác nhận điểm đến </string>
    <string name="Currentlocation">Vị trí hiện tại</string>
    <string name="VND" translatable="false"> \ VND</string>
    <string name="Person">\ Người</string>
    <string name="person">\ người</string>
    <string name="SelectDay"> Chọn ngày</string>
    <string name="SelectTime"> Chọn thời gian:</string>
    <string name="SelectPerson"> Số người</string>
    <string name="departday">\ Chuyến đi ngày \ </string>
    <string name="Until">\ Còn \</string>
    <string name="day">\ d \</string>
    <string name="Day">\ Ngày \</string>
    <string name="Day1">\ Ngày đi \ </string>
    <string name="attime">\ lúc \</string>
    <string name="Time">\ Thời gian: \</string>
    <string name="showstreet">\ Xem chỉ đường \</string>
    <string name="showtb">\ Hiện thông tin \</string>
    <string name="finddr">\ Đang tìm tài xế… \</string>
    <string name="addressfail"> Không thể xác định vị trí này!</string>
    <string name="routefail"> Không thể xác định được tuyến đường này!</string>
    <string name="timefail"> Thời gian không hợp lệ!</string>
    <string name="timefail1"> Thời gian đặt trước cho phép tối thiểu là 60 phút đến tối đa 5 ngày.</string>
    <string name="timefail2"> Vui lòng chọn thời gian.</string>
    <string name="departpoint"> Điểm xuất phát</string>
    <string name="destinationpoint"> Địa điểm đến</string>
    <string name="addtripsuccess"> Thêm chuyến đi thành công!</string>
    <string name="addtripsuccess1"> Chuyến đi đã được thêm vào danh sách các chuyến đi sắp tới của bạn.</string>
    <string name="addtripfail"> Thêm chuyến đi thất bại!</string>
    <string name="removed">Đã xóa!</string>
    <string name="xacnhanhuy">Xác nhận huỷ?</string>
    <string name="cancle_trip">Bạn có muốn xoá chuyến đi này không?</string>
    <string name="cancle_trip1">Phí dịch vụ sẽ không được hoàn trả cho chuyến đi này!</string>
    <string name="deletetripsuccess"> Chuyến đi của bạn đã được hủy thành công!</string>
    <string name="no_reuse">Bạn sẽ không thể khôi phục lại thao tác này!</string>
    <string name="deletetripfail">  Không thể hủy chuyến đi!</string>
    <string name="receivedTrip">  Chuyến đi này đã được nhận! </string>
    <string name="notrip">  Không có chuyến đi nào được tìm thấy!</string>
    <string name="notrip2">  Bạn không có chuyến đi nào!</string>
    <string name="notrip1">  Không có hành khách nào gần bạn!</string>
    <string name="notrip0">  Thêm lịch trình ngay để nhận thông báo khi có chuyến đi của hành khách gần bạn.</string>
    <string name="nocurrenttrip"> Không có chuyến đi hiện tại!</string>
    <string name="found"> Đã tìm thấy \ </string>
    <string name="trips">  \ chuyến đi </string>
    <string name="addinforcar">Thêm </string>
    <string name="l_ch_tr_nh_c_a_b_n">Lịch trình của tôi </string>
    <string name="khuy_n_m_i">Khuyến mãi</string>
    <string name="t_m_xung_quanh">Tìm xung quanh</string>
    <string name="th_m_chuy_n_i_m_i">Thêm chuyến đi</string>
    <string name="chuy_n_i_s_p_t_i">Chuyến sắp tới</string>
    <string name="c_c_chuy_n_i">Chuyến đã đi</string>
    <string name="chuyen_di_da_nha">Danh sách các chuyến đi</string>
    <string name="read_chinhsach">Vui lòng đọc kĩ các chính sách và điều khoản sử dụng của chúng tôi.</string>
    <string name="i_u_kho_n_s_d_ng">điều khoản sử dụng</string>
    <string name="ch_nh_s_ch">Chính sách bảo mật</string>
    <string name="gioithieu">Về chúng tôi</string>
    <string name="ch_nh_s_ch_amp_i_u_kho_n_s_d_ng"><![CDATA[Chính sách & điều khoản sử dụng]]></string>
    <string name="t_i_hi_v_ng">Tôi hi vọng bạn đã có một chuyến đi tốt đẹp, hãy cho tôi biết đánh giá của bạn như thế nào?</string>
    <string name="g_i_cho_t_i_m_t_l_i_ph_n_h_i">Gửi cho tôi một lời phản hồi:</string>
    <string name="nh_p_n_i_dung">\ Nhập nội dung…</string>
    <string name="tr_h_n_m_kh_ng_b_o_tr_c">Trễ hẹn nhưng không báo trước.</string>
    <string name="t_ng_hu_chuy_n_i_v_o_ph_t_cu_i">Tự động huỷ chuyến đi vào phút cuối.</string>
    <string name="l_lo_kh_c">Lý lo khác:</string>
    <string name="n_u_b_n_c_v_n_v_ch">Nếu bạn có vấn đề về chuyến đi với người này, hãy cho chúng tôi biết lý do của bạn tại đây?</string>
    <string name="nh_gi_ng_d_ng">Đánh giá ứng dụng</string>
    <string name="chia_s_ngay">Chia Sẻ Ngay!</string>
    <string name="m_chia_s_c_"> Mã chia sẻ của bạn </string>
    <string name="xem_chi_ti_t"> <u>thêm</u>.</string>
</resources>