<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">




    <RelativeLayout
        android:id="@+id/relative_toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <ImageView
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_arrow_back_white_48dp"
            android:layout_width="32dp"
            android:layout_height="32dp" />
        <TextView
            android:layout_marginTop="24dp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="@string/Term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/ch_nh_s_ch_amp_i_u_kho_n_s_d_ng"
            android:layout_margin="12dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/read_chinhsach"
            android:layout_marginLeft="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">


        <Button
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gioithieu"
            android:gravity="left"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="16dp"/>


        <Button
            android:id="@+id/policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ch_nh_s_ch"
            android:gravity="left"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="16dp"/>


        <Button
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_u_kho_n_s_d_ng"
            android:gravity="left"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:padding="16dp"/>

    </LinearLayout>

</LinearLayout>
